--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=apiVeiculos
+
+# H2 Database
+spring.datasource.url=jdbc:h2:mem:meubanco
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Console do H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
