--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
 spring.application.name=apiVeiculos
 
 # H2 Database
-spring.datasource.url=jdbc:h2:mem:meubanco
+spring.datasource.url=jdbc:h2:mem:veiculos
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
 # JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.mode=always
 spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
+
 
 # Console do H2
 spring.h2.console.enabled=true
