--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,11 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 # JPA
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
+
 
 
 # Console do H2
