--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,6 @@ spring.h2.console.path=/h2-console
 
 
 # URL Front
-app.cors.allowed-origin=http://vps58538.publiccloud.com.br:5000/auth/login
+app.cors.allowed-origin=http://vps58538.publiccloud.com.br:5000/
 
 
